@@ -20,6 +20,8 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "AjSharp.Console", "AjSharp.
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "AjSharp.RunHost", "AjSharp.RunHost\AjSharp.RunHost.csproj", "{034845A2-0C7A-4655-8CBD-A40A927569E9}"
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "AjSharp.RemotingHost", "AjSharp.RemotingHost\AjSharp.RemotingHost.csproj", "{63E24BAD-5120-4A98-8CC8-E06E1B8F31D6}"
+EndProject
 Global
 	GlobalSection(TestCaseManagementSettings) = postSolution
 		CategoryFile = AjLanguage.vsmdi
@@ -53,6 +55,10 @@ Global
 		{034845A2-0C7A-4655-8CBD-A40A927569E9}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{034845A2-0C7A-4655-8CBD-A40A927569E9}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{034845A2-0C7A-4655-8CBD-A40A927569E9}.Release|Any CPU.Build.0 = Release|Any CPU
+		{63E24BAD-5120-4A98-8CC8-E06E1B8F31D6}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{63E24BAD-5120-4A98-8CC8-E06E1B8F31D6}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{63E24BAD-5120-4A98-8CC8-E06E1B8F31D6}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{63E24BAD-5120-4A98-8CC8-E06E1B8F31D6}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
