@@ -259,3 +259,8 @@ HostEvaluationTests
 RunServer
 SerializationTests in AjLanguage, AjSharp
 Serializable attribute in some Expressions, Commands
+
+2010-05-16
+Adding MarshalByRef object to DynamicClass, DynamicObject
+AjSharp.RemotingHost using remoting to access remote host and machines
+
